HFP-2932 Fix overlap of fullscreen buttons in edge < v18

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -121,6 +121,10 @@ $fullscreen-button-size: 1.8em;
   .h5p-interactive-book {
     display: flex;
     flex-direction: column;
+
+    &.edge-18 .h5p-interactive-book-status {
+      padding-right: 9em;
+    }
   }
 
   .h5p-interactive-book-main {
